[package]
authors     = ["Shane Tully <shane-crates@shanetully.com>"]
categories  = ["command-line-utilities"]
description = "A tool to check your MPD library for new music releases."
edition     = "2021"
homepage    = "https://github.com/shanet/mpd-fresh"
keywords    = ["cli", "mpd"]
license     = "GPL-3.0-only"
name        = "mpd-fresh"
readme      = "README.md"
repository  = "https://github.com/shanet/mpd-fresh"
version     = "0.2.0"

[dependencies]
clap             = "4.5.4"
once_cell        = "1.19.0"
percent-encoding = "2.3.1"
reqwest          = {version="0.12.4", features=["blocking", "json"]}
serde            = {version="1.0", features=["derive"]}
serde_json       = "1.0"
serde_yaml       = "0.9"
